--- a/myQRcode/Storyboards/Base.lproj/Scan.storyboard
+++ b/myQRcode/Storyboards/Base.lproj/Scan.storyboard
@@ -19,7 +19,7 @@
                         <viewLayoutGuide key="safeArea" id="nAa-mU-17H"/>
                     </view>
                     <navigationItem key="navigationItem" title="Scan" id="jMO-wS-otb">
-                        <barButtonItem key="rightBarButtonItem" title="About" image="History-Icon" id="NTk-Pb-EPH">
+                        <barButtonItem key="rightBarButtonItem" title="History" image="History-Icon" id="NTk-Pb-EPH">
                             <connections>
                                 <segue destination="Cmc-Je-jmf" kind="popoverPresentation" identifier="showHistory" popoverAnchorBarButtonItem="NTk-Pb-EPH" id="SXw-AD-jaP">
                                     <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
@@ -28,8 +28,9 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <segue destination="eWd-Zz-orO" kind="presentation" identifier="resultSegue" id="Dq6-Oj-fE6"/>
+                        <outlet property="historyButton" destination="NTk-Pb-EPH" id="2fc-2Q-zuL"/>
                         <segue destination="fmC-dP-8Vh" kind="show" identifier="errorSegue" id="jyk-MM-hkU"/>
+                        <segue destination="wiI-CY-nZo" kind="presentation" identifier="resultSegue" id="Q3Y-3y-VQI"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wP5-YN-7cU" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -53,9 +54,11 @@
                         </subviews>
                         <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                         <constraints>
-                            <constraint firstItem="j1a-tJ-n9F" firstAttribute="leading" secondItem="vHt-9d-7qx" secondAttribute="leading" constant="16" id="khb-lG-nzB"/>
+                            <constraint firstItem="j1a-tJ-n9F" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="vHt-9d-7qx" secondAttribute="leading" constant="8" id="NJe-hj-aCk"/>
+                            <constraint firstItem="j1a-tJ-n9F" firstAttribute="leading" relation="lessThanOrEqual" secondItem="vHt-9d-7qx" secondAttribute="leading" constant="16" id="khb-lG-nzB"/>
                             <constraint firstItem="j1a-tJ-n9F" firstAttribute="centerY" secondItem="cGK-ra-PSk" secondAttribute="centerY" id="o7M-w5-m4f"/>
-                            <constraint firstAttribute="trailing" secondItem="j1a-tJ-n9F" secondAttribute="trailing" constant="16" id="sWH-MK-Ejg"/>
+                            <constraint firstAttribute="trailing" relation="lessThanOrEqual" secondItem="j1a-tJ-n9F" secondAttribute="trailing" constant="16" id="sWH-MK-Ejg"/>
+                            <constraint firstItem="vHt-9d-7qx" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="j1a-tJ-n9F" secondAttribute="trailing" constant="8" id="wUw-0e-CkZ"/>
                             <constraint firstItem="j1a-tJ-n9F" firstAttribute="centerX" secondItem="cGK-ra-PSk" secondAttribute="centerX" id="zKC-Am-DHb"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="vHt-9d-7qx"/>
@@ -67,67 +70,53 @@
             <point key="canvasLocation" x="1001" y="902"/>
         </scene>
         <!--Result-->
-        <scene sceneID="auR-Ud-BNn">
+        <scene sceneID="67T-At-Buh">
             <objects>
-                <viewController title="Result" id="eWd-Zz-orO" customClass="ScanResultViewController" customModule="myQRcode" customModuleProvider="target" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="G6n-uK-Avv">
+                <tableViewController id="XXz-JF-Mje" customClass="ScanResultTableViewController" customModule="myQRcode" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="insetGrouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" id="TQU-Gw-NZa">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="647"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="RcF-I1-aFd">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="56"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="56" id="EhM-gj-O7u"/>
-                                </constraints>
-                                <items>
-                                    <navigationItem title="Result" id="weY-8y-NRz">
-                                        <barButtonItem key="leftBarButtonItem" title="Close" style="done" id="qYL-yu-zT8">
-                                            <connections>
-                                                <action selector="dismiss:" destination="eWd-Zz-orO" id="WrB-gb-fTM"/>
-                                            </connections>
-                                        </barButtonItem>
-                                    </navigationItem>
-                                </items>
-                            </navigationBar>
-                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="6H9-5X-CJh">
-                                <rect key="frame" x="8" y="93" width="359" height="546"/>
-                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
-                                <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                                <dataDetectorType key="dataDetectorTypes" phoneNumber="YES" link="YES" address="YES" calendarEvent="YES" shipmentTrackingNumber="YES" flightNumber="YES" lookupSuggestion="YES"/>
-                            </textView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Content of the scanned QR code" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zCW-kM-cY2">
-                                <rect key="frame" x="12" y="64" width="351" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                        <constraints>
-                            <constraint firstItem="zCW-kM-cY2" firstAttribute="top" secondItem="RcF-I1-aFd" secondAttribute="bottom" constant="8" id="6ER-3z-IFj"/>
-                            <constraint firstItem="zCW-kM-cY2" firstAttribute="leading" secondItem="A3K-Jk-KN9" secondAttribute="leading" constant="12" id="FD0-fx-1wF"/>
-                            <constraint firstItem="A3K-Jk-KN9" firstAttribute="trailing" secondItem="zCW-kM-cY2" secondAttribute="trailing" constant="12" id="FgC-ew-iTa"/>
-                            <constraint firstItem="6H9-5X-CJh" firstAttribute="top" secondItem="zCW-kM-cY2" secondAttribute="bottom" constant="8" id="Kng-rz-CXR"/>
-                            <constraint firstItem="RcF-I1-aFd" firstAttribute="leading" secondItem="A3K-Jk-KN9" secondAttribute="leading" id="M0L-Xr-Rxj"/>
-                            <constraint firstItem="RcF-I1-aFd" firstAttribute="trailing" secondItem="A3K-Jk-KN9" secondAttribute="trailing" id="N95-Rt-INc"/>
-                            <constraint firstItem="A3K-Jk-KN9" firstAttribute="bottom" secondItem="6H9-5X-CJh" secondAttribute="bottom" constant="8" id="VII-xQ-mLu"/>
-                            <constraint firstItem="RcF-I1-aFd" firstAttribute="leading" secondItem="A3K-Jk-KN9" secondAttribute="leading" id="YeS-QJ-tkH"/>
-                            <constraint firstItem="6H9-5X-CJh" firstAttribute="leading" secondItem="A3K-Jk-KN9" secondAttribute="leading" constant="8" id="cja-5s-vTv"/>
-                            <constraint firstItem="RcF-I1-aFd" firstAttribute="trailing" secondItem="A3K-Jk-KN9" secondAttribute="trailing" id="jLr-cZ-Eft"/>
-                            <constraint firstItem="A3K-Jk-KN9" firstAttribute="trailing" secondItem="6H9-5X-CJh" secondAttribute="trailing" constant="8" id="mr7-nG-0N0"/>
-                            <constraint firstItem="RcF-I1-aFd" firstAttribute="top" secondItem="A3K-Jk-KN9" secondAttribute="top" id="n6D-MB-Z7w"/>
-                        </constraints>
-                        <viewLayoutGuide key="safeArea" id="A3K-Jk-KN9"/>
-                    </view>
-                    <connections>
-                        <outlet property="resultTextView" destination="6H9-5X-CJh" id="2A2-te-dNn"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="4RW-e2-Qxq" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                        <sections>
+                            <tableViewSection headerTitle="CONTENT HEADLINE" id="E0h-tD-LST">
+                                <cells>
+                                    <tableViewCell clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" textLabel="xQv-tW-b83" style="IBUITableViewCellStyleDefault" id="FTP-ST-8WL">
+                                        <rect key="frame" x="16" y="55.5" width="343" height="43.5"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="FTP-ST-8WL" id="aCU-lR-v46">
+                                            <rect key="frame" x="0.0" y="0.0" width="343" height="43.5"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" enabled="NO" adjustsFontSizeToFit="NO" id="xQv-tW-b83">
+                                                    <rect key="frame" x="15" y="0.0" width="313" height="43.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" style="UICTFontTextStyleBody"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </cells>
+                            </tableViewSection>
+                        </sections>
+                        <connections>
+                            <outlet property="dataSource" destination="XXz-JF-Mje" id="zGB-vf-dRZ"/>
+                            <outlet property="delegate" destination="XXz-JF-Mje" id="RW4-Wo-0Dl"/>
+                        </connections>
+                    </tableView>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" title="Result" id="zr9-hr-oD8">
+                        <barButtonItem key="leftBarButtonItem" title="Close" style="done" id="tmj-tR-1PA">
+                            <connections>
+                                <action selector="dismiss:" destination="XXz-JF-Mje" id="Bv2-88-B46"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <nil key="simulatedBottomBarMetrics"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="r47-HO-qhJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1794" y="902"/>
+            <point key="canvasLocation" x="2545" y="902"/>
         </scene>
         <!--History-->
         <scene sceneID="dUQ-JB-2p9">
@@ -156,6 +145,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Zpe-bd-bEe" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="444" y="139.880059970015"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="cgM-OO-Pft">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="wiI-CY-nZo" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="9mA-8C-Rzy">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="56"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="XXz-JF-Mje" kind="relationship" relationship="rootViewController" id="9QR-ec-Yyh"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uGt-ve-cBI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1783" y="902"/>
         </scene>
     </scenes>
     <resources>
