--- a/myQRcode/Storyboards/Base.lproj/History.storyboard
+++ b/myQRcode/Storyboards/Base.lproj/History.storyboard
@@ -4,6 +4,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -53,8 +54,49 @@
                             </connections>
                         </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="noItemsView" destination="MwR-Z0-VQa" id="7dP-v1-tuN"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bzu-mT-HpE" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <view contentMode="scaleToFill" id="MwR-Z0-VQa" customClass="NoItemsView" customModule="myQRcode" customModuleProvider="target">
+                    <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <subviews>
+                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="32" translatesAutoresizingMaskIntoConstraints="NO" id="7r3-oj-uaf">
+                            <rect key="frame" x="9.5" y="6" width="221.5" height="116.5"/>
+                            <subviews>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Error-Icon" translatesAutoresizingMaskIntoConstraints="NO" id="jSb-yd-TeD">
+                                    <rect key="frame" x="78.5" y="0.0" width="64" height="64"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="64" id="C82-aG-sOl"/>
+                                        <constraint firstAttribute="height" constant="64" id="l7h-V2-dlr"/>
+                                    </constraints>
+                                </imageView>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="NO_ENTRYS_LABEL" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0GK-nR-pZg">
+                                    <rect key="frame" x="32" y="96" width="157.5" height="20.5"/>
+                                    <fontDescription key="fontDescription" style="UICTFontTextStyleHeadline"/>
+                                    <nil key="textColor"/>
+                                    <nil key="highlightedColor"/>
+                                </label>
+                            </subviews>
+                            <constraints>
+                                <constraint firstAttribute="trailing" secondItem="0GK-nR-pZg" secondAttribute="trailing" constant="32" id="8Ay-te-epd"/>
+                                <constraint firstItem="0GK-nR-pZg" firstAttribute="leading" secondItem="7r3-oj-uaf" secondAttribute="leading" constant="32" id="TEg-LK-N7j"/>
+                            </constraints>
+                        </stackView>
+                    </subviews>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                    <constraints>
+                        <constraint firstItem="7r3-oj-uaf" firstAttribute="centerX" secondItem="MwR-Z0-VQa" secondAttribute="centerX" id="1Eh-If-TX0"/>
+                        <constraint firstItem="7r3-oj-uaf" firstAttribute="centerY" secondItem="MwR-Z0-VQa" secondAttribute="centerY" id="hrT-bY-97d"/>
+                    </constraints>
+                    <viewLayoutGuide key="safeArea" id="EDc-Y5-EeB"/>
+                    <connections>
+                        <outlet property="errorIcon" destination="jSb-yd-TeD" id="Hbu-jo-OdC"/>
+                        <outlet property="noEntrysLabel" destination="0GK-nR-pZg" id="JBm-TV-1b4"/>
+                    </connections>
+                </view>
             </objects>
             <point key="canvasLocation" x="944.92753623188412" y="133.92857142857142"/>
         </scene>
@@ -77,4 +119,7 @@
             <point key="canvasLocation" x="34.782608695652179" y="133.92857142857142"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Error-Icon" width="50" height="50"/>
+    </resources>
 </document>
